<resources>
    <string name="app_name">VideoEditor</string>
    <string name="text_total_photo">%1$d Photo</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="can_not_pick_audio_file">Can\'t pick audio file</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="device_not_supported_message">FFmpeg is not supported on your device</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="dialog_confirm_text_btn_cancel">Cancel</string>
    <string name="dialog_confirm_text_btn_no">No</string>
    <string name="dialog_confirm_text_btn_yes">Yes</string>
    <string name="dialog_message_download_app">Press Yes to go to Android Store and install it</string>
    <string name="dialog_message_download_crop">To use this feature, you must download Crop application</string>
    <string name="dialog_msg_more_app">If you want to get more our free apps. Please press Yes.</string>
    <string name="dialog_msg_rate_us">If you interest this app. Please rate 5 star to support us.</string>
    <string name="dialog_text_text_btn_apply">Done</string>
    <string name="dialog_text_text_btn_cancel">Cancel</string>
    <string name="dialog_text_text_font_size">Font size :</string>
    <string name="dialog_title_download_app">Install App</string>
    <string name="dialog_title_download_crop">Download App?</string>
    <string name="dialog_title_more_app">More Free App</string>
    <string name="dialog_title_rate_us">Rate this App</string>
    <string name="empty_command_toast">You cannot execute empty command</string>
    <string name="lib_sticker_error_save_image">Error save image</string>
    <string name="lib_sticker_message_not_connect_network">Please check your connection or try again later</string>
    <string name="lib_sticker_text_title_sticker">Sticker</string>
    <string name="message_audio_length_too_short">Audio duration is too short, please select other audio</string>
    <string name="message_click_button_done_not_image">Please select some photos</string>
    <string name="message_confirm_exit_app">Are you sure want to exit?</string>
    <string name="message_create_photo_for_video">Create photo for video</string>
    <string name="message_create_video">Generating Video…</string>
    <string name="message_delete_video_my_video">Delete video success</string>
    <string name="message_device_not_support">Device is not supported</string>
    <string name="message_dialog_confirm">This photo is not saved, you want to save it before switch to next photo?</string>
    <string name="message_do_not_show">OK please do not show again</string>
    <string name="message_download">Downloading…</string>
    <string name="message_download_dialog">Please waiting…</string>
    <string name="message_download_error">Do you want to retry?</string>
    <string name="message_loading">Loading…</string>
    <string name="message_no_audio_found">Audio could not be found! Please press search button bellow</string>
    <string name="message_no_video">No Video</string>
    <string name="message_no_video_my_video">No Video</string>
    <string name="message_not_connect_network">Please check internet connection and try again</string>
    <string name="message_package_not_found">Package not found</string>
    <string name="message_permission_denied">You are not granted permission, therefore you cannot use this function.</string>
    <string name="message_permission_denied_remember">Please go to settings to re-grant permission for application</string>
    <string name="message_reset_audio">Change Audio. Please choose Effect again!</string>
    <string name="message_reset_effect">Change Effect. Please choose Audio again!</string>
    <string name="message_save_video">Do you want to save Video?</string>
    <string name="message_update_new_version_app">New version has been released. Please press Update to upgrade application</string>
    <string name="message_update_photo_crop">You must update PhotoCrop to newest version</string>
    <string name="message_warning_change_duration">Change duration will lost effect added!</string>
    <string name="message_warning_change_image">Modify Image will lost effect added!</string>
    <string name="no_file_explorer_found">No file explorer found</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="run">Run</string>
    <string name="text_add_audio">Add Audio</string>
    <string name="text_apply">Apply</string>
    <string name="text_apply_dialog_pick_color">Apply</string>
    <string name="text_btn_background">Blur</string>
    <string name="text_btn_border">Border</string>
    <string name="text_btn_close">Close</string>
    <string name="text_btn_crop">Crop</string>
    <string name="text_btn_done">Done</string>
    <string name="text_btn_filter">Filter</string>
    <string name="text_btn_flip_h">Flip H</string>
    <string name="text_btn_flip_v">Flip V</string>
    <string name="text_btn_rotate_l">Rotate L</string>
    <string name="text_btn_rotate_r">Rotate R</string>
    <string name="text_btn_save">Save</string>
    <string name="text_btn_sticker">Sticker</string>
    <string name="text_btn_text">Text</string>
    <string name="text_btn_zoom_in">Zoom In</string>
    <string name="text_btn_zoom_out">Zoom Out</string>
    <string name="text_button_cancel_dialog">Cancel</string>
    <string name="text_button_done">Done</string>
    <string name="text_button_done_extends">Start</string>
    <string name="text_button_install">INSTALL</string>
    <string name="text_button_no">No</string>
    <string name="text_button_save">| Save</string>
    <string name="text_button_yes">Yes</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_cancel_dialog_pick_color">Cancel</string>
    <string name="text_choose_a_audio">Choose a audio</string>
    <string name="text_continue">Continue?</string>
    <string name="text_duration">Duration</string>
    <string name="text_editor">Editor</string>
    <string name="text_effect">Filter</string>
    <string name="text_file_path">File path: %1$s</string>
    <string name="text_get_more_app">Get more app</string>
    <string name="text_header_saved_video">Video Saved Successfully</string>
    <string name="text_hint_edit_text">Input message</string>
    <string name="text_images">%1$d Images</string>
    <string name="text_message_limit_pick_image">Limit %1$d photo</string>
    <string name="text_message_select_image">Please select %1$d to %2$d photos</string>
    <string name="text_message_select_image_for_video">Please choose some photos</string>
    <string name="text_music">Music</string>
    <string name="text_my_video">My Video</string>
    <string name="text_recommended">Recommended for you</string>
    <string name="text_share_via">Share via</string>
    <string name="text_slideshow">SlideShow</string>
    <string name="text_theme">Theme</string>
    <string name="text_title_activity_album">Select photo for video</string>
    <string name="text_title_activity_album_extends">Recent Photos</string>
    <string name="text_title_dialog_confirm">Confirm</string>
    <string name="text_title_dialog_sort_by_album">Sort albums by</string>
    <string name="text_title_dialog_sort_by_photo">Sort photos by</string>
    <string name="text_title_dialog_text">Text</string>
    <string name="text_title_exit">Exit</string>
    <string name="text_title_more_app_suggest">Suggested Apps</string>
    <string name="text_vote_5_star">Rate 5*</string>
    <string name="title_dialog_download_error">Download Error</string>
    <string name="title_dialog_duration">Interval between photos</string>
    <string name="title_dialog_save_video">Save Video</string>
    <string name="title_download_dialog">Download Effect</string>
    <string name="title_pick_audio">Pick Audio From Storage</string>
    <string name="title_reset_media">Reset media</string>
    <string name="title_select_color">Select Color</string>
    <string name="title_share_file">Share via</string>
    <string name="title_text_apply">Apply</string>
    <string name="txt_title_my_video">My Video</string>
    <string name="zip_extract_fail">Extract file Error</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="color1_summary">black color by default, set by reference</string>
    <string name="color1_title">Color 1</string>
    <string name="color2_summary">not persistent color\nalpha slider added via code</string>
    <string name="color2_title">Color 2</string>
    <string name="color3_summary">picker with alpha slider</string>
    <string name="color3_title">Color 3</string>
    <string name="color4_summary">color set with HEX code in xml</string>
    <string name="color4_title">Color 4</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="fragment_tag_music">Music</string>
    <string name="frg_tag_more_app">tag_more_app</string>
    <string name="ga_trackingId">UA-77527740-1</string>
    <string name="gcm_defaultSenderId">350919239124</string>
    <string name="google_api_key">AIzaSyBtsbPbGmq_hEf3HhwxWXFBenpRg4x0SXY</string>
    <string name="google_app_id">1:350919239124:android:2f0437302cab66a5</string>
    <string name="google_crash_reporting_api_key">AIzaSyBtsbPbGmq_hEf3HhwxWXFBenpRg4x0SXY</string>
    <string name="libMoreUtil_facebook_app_id">1615029248795487</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
</resources>