<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#3d3d3d"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:textStyle="bold"
            android:textColor="#fff"
            android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
            android:id="@+id/textView1"
            android:background="#dc4040"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_dialog_confirm"/>

    <TextView
            android:textColor="#fff"
            android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
            android:id="@+id/textView2"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_dialog_confirm"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:textStyle="bold"
                android:textColor="#fff"
                android:gravity="center"
                android:id="@+id/btnSave"
                android:background="@drawable/libphotoeditor_selector_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/dialog_confirm_text_btn_yes"
                android:layout_weight="1.0"/>

        <Button
                android:textStyle="bold"
                android:textColor="#fff"
                android:gravity="center"
                android:id="@+id/btnNo"
                android:background="@drawable/libphotoeditor_selector_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/dialog_confirm_text_btn_no"
                android:layout_weight="1.0"/>

        <Button
                android:textStyle="bold"
                android:textColor="#fff"
                android:gravity="center"
                android:id="@+id/btnCancel"
                android:background="@drawable/libphotoeditor_selector_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/dialog_confirm_text_btn_cancel"
                android:layout_weight="1.0"/>
    </LinearLayout>
</LinearLayout>
