<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
<LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layoutTools"
        android:background="#262626"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
<LinearLayout
        android:orientation="vertical"
        android:id="@+id/btnCrop"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1.0">
<ImageView
        android:id="@+id/iconCrop"
        android:background="@drawable/libphotoeditor_icon_crop"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"/>

<TextView
        android:textSize="8sp"
        android:textColor="#fff"
        android:id="@+id/txtCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_crop"/>
</LinearLayout>
<LinearLayout
        android:orientation="vertical"
        android:id="@+id/btnFlipV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="1.0">
<ImageView
        android:id="@+id/iconFlipV"
        android:background="@drawable/libphotoeditor_icon_flip_v"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"/>

<TextView
        android:textSize="8sp"
        android:textColor="#fff"
        android:id="@+id/txtFlipV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_flip_v"/>
</LinearLayout>
<LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/btnFlipH"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1.0">
<ImageView
        android:id="@+id/iconFlipH"
        android:background="@drawable/libphotoeditor_icon_flip_h"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"/>

<TextView
        android:textSize="8sp"
        android:textColor="#fff"
        android:id="@+id/txtFlipH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_flip_h"/>
</LinearLayout>
<LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/btnZoomIn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1.0">
<ImageView
        android:id="@+id/iconZoomIn"
        android:background="@drawable/libphotoeditor_icon_zoom_in"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"/>

<TextView
        android:textSize="8sp"
        android:textColor="#fff"
        android:id="@+id/txtZoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_zoom_in"/>
</LinearLayout>
<LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/btnZoomOut"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1.0">
<ImageView
        android:id="@+id/iconZoomOut"
        android:background="@drawable/libphotoeditor_icon_zoom_out"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"/>

<TextView
        android:textSize="8sp"
        android:textColor="#fff"
        android:id="@+id/txtZoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_zoom_out"/>
</LinearLayout>
<LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/btnRotateL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1.0">
<ImageView
        android:id="@+id/iconRotateL"
        android:background="@drawable/libphotoeditor_icon_rotate_l"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"/>

<TextView
        android:textSize="8sp"
        android:textColor="#fff"
        android:id="@+id/txtRotateL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_rotate_l"/>
</LinearLayout>
<LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/btnRotateR"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1.0">
<ImageView
        android:id="@+id/iconRotateR"
        android:background="@drawable/libphotoeditor_icon_rotate_r"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"/>

<TextView
        android:textSize="8sp"
        android:textColor="#fff"
        android:id="@+id/txtRotateR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_rotate_r"/>
</LinearLayout>
<LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/btnClose"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1.0">
<ImageView
        android:id="@+id/iconClose"
        android:background="@drawable/libphotoeditor_icon_close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"/>

<TextView
        android:textSize="8sp"
        android:textColor="#fff"
        android:id="@+id/txtClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_close"/>
</LinearLayout>
</LinearLayout>
</LinearLayout>
